<resources>
    <string name="app_name">GeekHarvest</string>
    <string name="sel_Plant">Select Plant</string>
    <string name="chilli">Common name: \nChili</string>
    <string name="coriander">Coriander</string>
    <string name="Helianthus_annuus">Helianthus annuus</string>
    <string name="PleaseLogin">Please Log in</string>
    <string name="SignUp">Sign Up</string>
    <string name="plantName">PLANT NAME</string>
    <string name="Setting">Setting</string>
    <string name="SignOut">Sign out</string>
    <string name="Notification">Notification</string>
    <string name="Auto">Automatic Valve</string>
    <string name="Humidity">Humidity</string>
    <string name="Poor_Light">Poor light intensity</string>
    <string name="Temperature">Temperature</string>
    <string name="Date">Date of plant</string>
    <string name="Time">Time of plant</string>
    <string name="NewPlant">New plant</string>
    <string name="Using_Auto">Time of using Auto</string>
    <string name="Reset">Reset</string>
    <string name="poptext">Pop</string>
    <string name="Comfirm_Pass">Confirm Password</string>
    <string name="drawer_open">Open Navigation drawer</string>
    <string name="drawer_close">Close Navigation drawer</string>
    <string name="info_Chilli">Characteristics: \nSmall shrubs with the height of 30-120 cm. Its leaves are flat, smooth and glossy. Its products are small-sized with an estimate length of 2-3 cm. Its product will be green while being raw,
        and change to red when fully matured. It has spicy taste and popular with many dishes.</string>
    <string name="phase_chilli_info">Estimate harvest time: \nSprout: 7-10 days\nHarvest: 60-90 days after transplanted</string>
    <string name="info_Coriander">Coriander also known as cilantro or Chinese parsley, is an annual herb in the family Apiaceae.
        All parts of the plant are edible, but the fresh leaves and the dried seeds are the parts most traditionally used in cooking.</string>
    <string name="info_Helianthus">Helianthus annuus, the common sunflower, is a large annual forb of the genus Helianthus grown as a crop for its edible oil and edible fruits (sunflower seeds).
        This sunflower species is also used as bird food, as livestock forage (as a meal or a silage plant), and in some industrial applications. </string>
    <string name="crop">ปลูกเลย</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>


    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_nav_activity">Nav_activity</string>
    <string name="title_activity_navigator_drawer">NavigatorDrawer</string>
    <string name="title_activity_main">MainActivity</string>

    <string-array name="array_hour">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
